--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ test: off
 deploy: off
 # See http://www.appveyor.com/docs/services-databases
 services:
-  - mssql2014
+  - mongodb
 branches:
   only:
     - release
@@ -20,7 +20,6 @@ environment:
   global:
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
     DOTNET_CLI_TELEMETRY_OPTOUT: 1
-    Test__SqlServer__DefaultConnection: Server=(local)\SQL2014;Database=master;User ID=sa;Password=Password12!
 matrix:
   fast_finish: true
 artifacts:
