--- a/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
+++ b/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
@@ -10,10 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Specification.Tests" Version="1.2.0-preview1-23814" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Specification.Tests" Version="1.2.0-preview1-*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Moq" Version="4.7.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
