--- a/NuGet.config
+++ b/NuGet.config
@@ -5,5 +5,9 @@
     <add key="AspNetVNext" value="https://www.myget.org/F/aspnetvnext/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
     <add key="NETCore" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="EFCore-MongoDb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
   </packageSources>
+  <disabledPackageSources>
+    <add key="Microsoft and .NET" value="true" />
+  </disabledPackageSources>
 </configuration>
