--- a/src/Blueshift.EntityFrameworkCore.MongoDb.SampleDomain/Blueshift.EntityFrameworkCore.MongoDb.SampleDomain.csproj
+++ b/src/Blueshift.EntityFrameworkCore.MongoDb.SampleDomain/Blueshift.EntityFrameworkCore.MongoDb.SampleDomain.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\build\common.props" />
+  
   <PropertyGroup>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFrameworks>net452;netstandard1.5</TargetFrameworks>
+    <Product>Blueshift MongoDb Provider for EntityFrameworkCore</Product>
+    <Description>Sample Domain Library for EntityFramework Core MongoDb Provider</Description>
   </PropertyGroup>
-
-  <ItemGroup>
+  
+<ItemGroup>
     <ProjectReference Include="..\Blueshift.EntityFrameworkCore.MongoDB\Blueshift.EntityFrameworkCore.MongoDB.csproj" />
   </ItemGroup>
 
