--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ test: off
 deploy:
   provider: Environment
   name: MyGet
-  artifact: /artifacts\\build\\((?!SampleDomain)[^\.]+\.)+nupkg/
+  artifact: /artifacts\\build\\((?!SampleDomain).)+\.nupkg/
 services:
   - mongodb
 branches:
