Replaced TestDomain with SampleDomain. One last attempt at appveyor auto-deploy.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ test: off
 deploy:
   provider: Environment
   name: MyGet
-  artifact: /artifacts\\build\\((?!SampleDomain).)+\.nupkg/
+  artifact: artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg
 services:
   - mongodb
 branches:
