--- a/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
+++ b/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Blueshift.EntityFrameworkCore.MongoDb.SampleDomain\Blueshift.EntityFrameworkCore.MongoDB.SampleDomain.csproj" />
     <ProjectReference Include="..\..\src\Blueshift.EntityFrameworkCore.MongoDB\Blueshift.EntityFrameworkCore.MongoDB.csproj" />
   </ItemGroup>
 
