Added documentation to the API. Updated annotation model to be more user-friendly and line up better with current EFCore methodology. Add Travis CI settings.

--- a/src/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
+++ b/src/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
@@ -6,6 +6,9 @@
     <TargetFrameworks>net452;netstandard1.5</TargetFrameworks>
     <Product>Blueshift MongoDb Provider for EntityFrameworkCore</Product>
     <Description>Blueshift Software MongoDb Provider for Microsoft EntityFramework Core</Description>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageTags>$(PackageTags);MongoDb</PackageTags>
+    <RootNamespace>Blueshift.EntityFrameworkCore.MongoDB</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
