--- a/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
+++ b/test/Blueshift.EntityFrameworkCore.MongoDb.Tests/Blueshift.EntityFrameworkCore.MongoDb.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>    
     <TargetFrameworks>net452;netcoreapp1.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp1.1</TargetFrameworks>
     <Company>Blueshift Software, LLC</Company>    
     <Description></Description>    
     <Product></Product>    
