--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,8 @@ test: off
 deploy:
   provider: Environment
   name: MyGet
-  artifact: artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg
+  artifact:
+    -path: artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg
 services:
   - mongodb
 branches:
@@ -23,5 +24,5 @@ environment:
 matrix:
   fast_finish: true
 artifacts:
-  - path: 'artifacts\build\*.nupkg'
+  - path: 'artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg'
 os: Visual Studio 2017
