Fix for artifact path.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,7 @@ test: off
 deploy:
   provider: Environment
   name: MyGet
-  artifact:
-    -path: artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg
+  artifact: 'artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg'
 services:
   - mongodb
 branches:
