--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,6 @@ environment:
 matrix:
   fast_finish: true
 artifacts:
-  - path: 'artifacts\build\Blueshift.EntityFrameworkCore.MongoDb(-preview*).nupkg'
+  - path: 'artifacts\build\Blueshift.EntityFrameworkCore.MongoDb-preview*.nupkg'
     name: MyGet
 os: Visual Studio 2017
