--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,4 +21,8 @@ matrix:
 artifacts:
   - path: 'artifacts\build\*.nupkg'
     name: MyGet
+deploy:
+  provider: Environment
+  name: MyGet
+  artifact: 'artifacts\build\*.nupkg'
 os: Visual Studio 2017
