Implemented MongoDB Identity Provider. Added ObjectId type converter. Fixed EFCore provider's Async query execution and removed unnecessary classes. Renamed solution file.

--- a/src/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
+++ b/src/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.4.3" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5' ">
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
