--- a/NuGet.config
+++ b/NuGet.config
@@ -2,9 +2,9 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="AspNetVNext" value="https://www.myget.org/F/aspnetvnext/api/v3/index.json" />
-    <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="NETCore" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="AspNetCore" value="https://dotnet.myget.org/F/aspnetcore-ci-dev/api/v3/index.json" />
+    <add key="AspNetCoreTools" value="https://dotnet.myget.org/F/aspnetcore-tools/api/v3/index.json" />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="EFCore-MongoDb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
