--- a/src/Blueshift.Identity.MongoDB/Blueshift.Identity.MongoDB.csproj
+++ b/src/Blueshift.Identity.MongoDB/Blueshift.Identity.MongoDB.csproj
@@ -7,7 +7,7 @@
     <Product>Blueshift MongoDB EntityFrameworkCore Identity Provider for Microsoft ASP.NET Core</Product>
     <Description>Blueshift Software MongoDB EntityFrameworkCore Identity Provider for Microsoft ASP.NET Core</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageTags>$(PackageTags);MongoDb</PackageTags>
+    <PackageTags>$(PackageTags);AspNetCore;Identity;Membership</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
