--- a/src/Blueshift.MongoDB.Tests.Shared/Blueshift.MongoDB.Tests.Shared.csproj
+++ b/src/Blueshift.MongoDB.Tests.Shared/Blueshift.MongoDB.Tests.Shared.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="$(CoreFxVersion)" />
+    <PackageReference Condition="'$(TargetFrameworkIdentifier)' != '.NETFramework'" Include="Microsoft.CSharp" Version="$(CoreFxVersion)" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Specification.Tests" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="MongoDB.Driver" Version="$(MongoDbVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
