--- a/src/Blueshift.Identity.MongoDB/Blueshift.Identity.MongoDB.csproj
+++ b/src/Blueshift.Identity.MongoDB/Blueshift.Identity.MongoDB.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\build\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Product>Blueshift MongoDB EntityFrameworkCore Identity Provider for Microsoft ASP.NET Core</Product>
     <Description>Blueshift Software MongoDB EntityFrameworkCore Identity Provider for Microsoft ASP.NET Core</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
