--- a/version.props
+++ b/version.props
@@ -1,7 +1,8 @@
-<!-- This file may be overwritten by automation. Only values allowed here are VersionPrefix and VersionSuffix.  -->
+<!-- This file may be overwritten by automation. -->
 <Project>
-    <PropertyGroup>
-        <VersionPrefix>2.0.0</VersionPrefix>
-        <VersionSuffix>preview</VersionSuffix>
-    </PropertyGroup>
+  <PropertyGroup>
+    <KoreBuildChannel>dev</KoreBuildChannel>
+    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionSuffix>preview</VersionSuffix>
+  </PropertyGroup>
 </Project>
