--- a/test/Blueshift.Identity.MongoDB.Tests/Blueshift.Identity.MongoDB.Tests.csproj
+++ b/test/Blueshift.Identity.MongoDB.Tests/Blueshift.Identity.MongoDB.Tests.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\src\Shared\CodeAnnotations.cs" Link="CodeAnnotations.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)" />
