Updates to support latest EFCore 2.1.

--- a/NuGet.config
+++ b/NuGet.config
@@ -2,12 +2,12 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="AspNetCore" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
-    <add key="AspNetCoreTools" value="https://dotnet.myget.org/F/aspnetcore-tools/api/v3/index.json" />
-    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-    <add key="EFCore-MongoDb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
+    <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="aspnetcore-dev" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
+    <add key="aspnetcore-tools" value="https://dotnet.myget.org/F/aspnetcore-tools/api/v3/index.json" />
+    <add key="efcore-mongdb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+
+    <!-- Restore sources should be defined in build/sources.props. -->
   </packageSources>
-  <disabledPackageSources>
-    <add key="Microsoft and .NET" value="true" />
-  </disabledPackageSources>
 </configuration>
