--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,11 +17,15 @@
     <PackageTags>Blueshift;MongoDB;Entity Framework Core;entity-framework-core;EF;Data;O/RM</PackageTags>
     <Product>Blueshift Software MongoDB Provider for Entity Framework Core</Product>
     <DebugType Condition="'$(Configuration)' == 'Debug' AND '$(OS)' == 'Windows_NT'">full</DebugType>
-    <StyleCopAnalyzersVersion>1.0.0</StyleCopAnalyzersVersion>
-    <LangVersion>7.1</LangVersion>
+    <LangVersion>7.2</LangVersion>
+    <NoWarn>CS8032;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="**\*.rd.xml" />
+    <EmbeddedResource Include="**\*.rd.xml" />    
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers" Version="$(MicrosoftNetCompilersPackageVersion)" NoWarn="KRB4002" PrivateAssets="ALL" />
   </ItemGroup>
 </Project>
