--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,11 @@ artifacts:
   - path: 'artifacts\build\*.nupkg'
     name: MyGet
 deploy:
-  provider: Environment
-  name: MyGet
-  artifact: 'artifacts\build\*.nupkg'
-os: Visual Studio 2017
+  - provider: Environment
+    name: MyGet
+    artifact: 'artifacts\build\*.nupkg'
+    on:
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+image:
+- Visual Studio 2017
+- Ubuntu
