Updated build script for Appveyor Ubuntu
Changed script from run.ps1 to run.sh.
Switched image order to build Ubuntu first.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,13 @@ deploy:
     artifact: 'artifacts\build\*.nupkg'
     on:
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+for:
+-
+  matrix:
+    only:
+      - image: Ubuntu
+    build_script:
+      - run.sh default-build
 image:
-- Visual Studio 2017
 - Ubuntu
+- Visual Studio 2017
