--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ for:
     only:
       - image: Ubuntu
   build_script:
-    - run.sh default-build
+    - sh: run.sh default-build
 image:
 - Ubuntu
 - Visual Studio 2017
