--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,9 +33,8 @@ for:
     only:
       - image: Ubuntu
   build_script:
-    - sh: >-
-        chmod +x ./run.sh
-        ./run.sh default-build
+    - sh: chmod +x ./run.sh
+    - sh: ./run.sh default-build
 image:
 - Ubuntu
 - Visual Studio 2017
