--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,14 @@ environment:
     DOTNET_CLI_TELEMETRY_OPTOUT: 1
 matrix:
   fast_finish: true
+for:
+-
+  matrix:
+    only:
+      - image: Ubuntu
+  build_script:
+    - sh: chmod +x ./run.sh
+    - sh: ./run.sh default-build
 artifacts:
   - path: 'artifacts\build\*.nupkg'
     name: MyGet
@@ -28,4 +36,5 @@ deploy:
     on:
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 image:
+- Ubuntu
 - Visual Studio 2017
