Refactor everything to better support owned types.
Moving support to EF Core 2.1 RTM.
Refactored many services to use existing EF Core 2.1 functionality.
Revamped Owned type support to better support EF Core.
Reworked some conventions to better align with standard MongoDB C# driver and EF Core conventions.
Refactored tests to better utilize unit of work, and make use of fluent syntax for configuring test assertions.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,6 +20,9 @@
     <DebugType Condition="'$(Configuration)' == 'Debug' AND '$(OS)' == 'Windows_NT'">full</DebugType>
     <LangVersion>7.2</LangVersion>
     <NoWarn>$(NoWarn);CS8032;</NoWarn>
+
+    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>$(MSBuildProjectName)</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
