--- a/test/Blueshift.EntityFrameworkCore.MongoDB.Tests/Blueshift.EntityFrameworkCore.MongoDB.Tests.csproj
+++ b/test/Blueshift.EntityFrameworkCore.MongoDB.Tests/Blueshift.EntityFrameworkCore.MongoDB.Tests.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT' OR '$(CoreOnly)' == 'True'">netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>$(TestFrameworks)</TargetFrameworks>
     <TestGroupName>MongoDb.EFCore.Tests</TestGroupName>
   </PropertyGroup>
 
@@ -14,11 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Specification.Tests" Version="$(MicrosoftEntityFrameworkCoreSpecificationTestsPackageVersion)" NoWarn="KRB4002" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPackageVersion)" NoWarn="KRB4002" />
-    <PackageReference Include="Moq" Version="$(MoqPackageVersion)" NoWarn="KRB4002" />
-    <PackageReference Include="xunit" Version="$(XunitPackageVersion)" NoWarn="KRB4002" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVisualstudioPackageVersion)" NoWarn="KRB4002" />
-    <PackageReference Include="xunit.runner.console" Version="$(XunitRunnerVisualstudioPackageVersion)" NoWarn="KRB4002" />
   </ItemGroup>
 
   <ItemGroup>
